<resources>
    <string name="app_name">ProjetAndroid20182019</string>
    <string name="title_activity_new_plan">NewPlan</string>
    <string name="title_activity_detail_plan">DetailPlan</string>
    <string name="title_activity_new_expense">NewExpense</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_email">Email (optional)</string>
    <string name="currency">Currency</string>
    <string name="hint_name">My name</string>
    <string name="new_plan"> New Tricount</string>
    <string name="new_expense">New Expense</string>
    <string name="hint_amount">Amount</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="other_participant">Other participant</string>
    <string name="title_activity_edit_plan">EditPlan</string>
    <string name="edit_plan">Edit tricount</string>
</resources>
